--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,5 @@
 version: "3.8"
 
-#Update the connection among these microservices before starting the container.
-
 services:
   nginx:
     build:
@@ -9,24 +7,30 @@ services:
       dockerfile: Dockerfile
     ports:
       - 80:80
-      
+    depends_on:
+      - frontend
+
   frontend:
-    build: 
+    build:
       context: ./frontend
       dockerfile: Dockerfile
     ports:
       - 3000:3000
     volumes:
       - ./frontend:/app
-  
+    depends_on:
+      - api
+
   api:
-    build: 
+    build:
       context: ./api
       dockerfile: Dockerfile
     ports:
       - 5000:5000
     volumes:
       - ./api:/app
+    depends_on:
+      - db
 
   db:
     image: postgres:15.3-alpine3.18
